tests/rosetta/transpiler/C/bitwise-io-2.c
// Generated by Mochi 0.10.32 on 2025-07-31 12:13 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <malloc.h>

size_t bytesOfStr_len;

static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static char* str_int(int v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%d", v);
    return strdup(buf);
}

typedef struct { const char **keys; const char **vals; size_t len; } MapSS;

static const char* map_get_ss(const char *keys[], const char *vals[], size_t len, const char *key) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(keys[i], key) == 0) return vals[i];
    }
    return "";
}

static int* list_append_int(int *arr, size_t *len, int val) {
    arr = realloc(arr, (*len + 1) * sizeof(int));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    struct mallinfo mi = mallinfo();
    return (long long)mi.uordblks;
}

static const char* _substring(const char *s, int start, int end) {
    int len = (int)strlen(s);
    if (start < 0) start = 0;
    if (end > len) end = len;
    if (start > end) start = end;
    char *res = malloc(end - start + 1);
    memcpy(res, s + start, end - start);
    res[end - start] = 0;
    return res;
}

typedef struct Anon1 Anon1;
typedef struct Reader Reader;
typedef struct Writer Writer;

struct Anon1 {
    int val;
    int eof;
};

struct Reader {
    const char* order;
    int *data;
    size_t data_len;
    int idx;
    int bits;
    int nbits;
};

struct Writer {
    const char* order;
    int bits;
    int nbits;
    int *data;
    size_t data_len;
};

int pow2(int n);
int lshift(int x, int n);
int rshift(int x, int n);
Writer NewWriter(const char* order);
Writer writeBitsLSB(Writer w, int c, int width);
Writer writeBitsMSB(Writer w, int c, int width);
Writer WriteBits(Writer w, int c, int width);
Writer CloseWriter(Writer w);
Reader NewReader(int * data, size_t data_len, const char* order);
Anon1 readBitsLSB(Reader r, int width);
Anon1 readBitsMSB(Reader r, int width);
Anon1 ReadBits(Reader r, int width);
const char* toBinary(int n, int bits);
const char* bytesToBits(int * bs, size_t bs_len);
const char* bytesToHex(int * bs, size_t bs_len);
int ord(const char* ch);
const char* chr(int n);
int * bytesOfStr(const char* s);
const char* bytesToDec(int * bs, size_t bs_len);
int Example();
int main(void);

int pow2(int n) {
    int v = 1LL;
    int i = 0LL;
    while (i < n) {
        v = v * 2LL;
        i = i + 1LL;
    }
    return v;
}

int lshift(int x, int n) {
    return x * pow2(n);
}

int rshift(int x, int n) {
    return x / pow2(n);
}

Writer NewWriter(const char* order) {
    return (Writer){.order = order, .bits = 0LL, .nbits = 0LL, .data = NULL, .data_len = 0};
}

Writer writeBitsLSB(Writer w, int c, int width) {
    w.bits = w.bits + lshift(c, w.nbits);
    w.nbits = w.nbits + width;
    while (w.nbits >= 8LL) {
        int b = w.bits % 256LL;
        w.data = append(w.data, b);
        w.bits = rshift(w.bits, 8LL);
        w.nbits = w.nbits - 8LL;
    }
    return w;
}

Writer writeBitsMSB(Writer w, int c, int width) {
    w.bits = w.bits + lshift(c, (32LL - width) - w.nbits);
    w.nbits = w.nbits + width;
    while (w.nbits >= 8LL) {
        int b = rshift(w.bits, 24LL) % 256LL;
        w.data = append(w.data, b);
        w.bits = (w.bits % pow2(24LL)) * 256LL;
        w.nbits = w.nbits - 8LL;
    }
    return w;
}

Writer WriteBits(Writer w, int c, int width) {
    if (strcmp(w.order, "LSB") == 0) {
        return writeBitsLSB(w, c, width);
    }
    return writeBitsMSB(w, c, width);
}

Writer CloseWriter(Writer w) {
    if (w.nbits > 0LL) {
        if (strcmp(w.order, "MSB") == 0) {
            w.bits = rshift(w.bits, 24LL);
        }
        w.data = append(w.data, w.bits % 256LL);
    }
    w.bits = 0LL;
    w.nbits = 0LL;
    return w;
}

Reader NewReader(int * data, size_t data_len, const char* order) {
    return (Reader){.order = order, .data = data, .data_len = data_len, .idx = 0LL, .bits = 0LL, .nbits = 0LL};
}

Anon1 readBitsLSB(Reader r, int width) {
    while (r.nbits < width) {
        if (r.idx >= len(r.data)) {
            return (Anon1){.val = 0LL, .eof = 1LL};
        }
        int b = r.data[(int)(r.idx)];
        r.idx = r.idx + 1LL;
        r.bits = r.bits + lshift(b, r.nbits);
        r.nbits = r.nbits + 8LL;
    }
    int mask = pow2(width) - 1LL;
    int out = r.bits % (mask + 1LL);
    r.bits = rshift(r.bits, width);
    r.nbits = r.nbits - width;
    return (Anon1){.val = out, .eof = 0LL};
}

Anon1 readBitsMSB(Reader r, int width) {
    while (r.nbits < width) {
        if (r.idx >= len(r.data)) {
            return (Anon1){.val = 0LL, .eof = 1LL};
        }
        int b = r.data[(int)(r.idx)];
        r.idx = r.idx + 1LL;
        r.bits = r.bits + lshift(b, 24LL - r.nbits);
        r.nbits = r.nbits + 8LL;
    }
    int out = rshift(r.bits, 32LL - width);
    r.bits = (r.bits * pow2(width)) % pow2(32LL);
    r.nbits = r.nbits - width;
    return (Anon1){.val = out, .eof = 0LL};
}

Anon1 ReadBits(Reader r, int width) {
    if (strcmp(r.order, "LSB") == 0) {
        return readBitsLSB(r, width);
    }
    return readBitsMSB(r, width);
}

const char* toBinary(int n, int bits) {
    const char* b = "";
    int val = n;
    int i = 0LL;
    while (i < bits) {
        b = str_concat(str_int(val % 2LL), b);
        val = val / 2LL;
        i = i + 1LL;
    }
    return b;
}

const char* bytesToBits(int * bs, size_t bs_len) {
    const char* out = "[";
    int i = 0LL;
    while (i < bs_len) {
        out = str_concat(out, toBinary(bs[(int)(i)], 8LL));
        if ((i + 1LL) < bs_len) {
            out = str_concat(out, " ");
        }
        i = i + 1LL;
    }
    out = str_concat(out, "]");
    return out;
}

const char* bytesToHex(int * bs, size_t bs_len) {
    const char* digits = "0123456789ABCDEF";
    const char* out = "";
    int i = 0LL;
    while (i < bs_len) {
        int b = bs[(int)(i)];
        int hi = b / 16LL;
        int lo = b % 16LL;
        out = str_concat(str_concat(out, _substring(digits, hi, hi + 1LL)), _substring(digits, lo, lo + 1LL));
        if ((i + 1LL) < bs_len) {
            out = str_concat(out, " ");
        }
        i = i + 1LL;
    }
    return out;
}

int ord(const char* ch) {
    const char* upper = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
    const char* lower = "abcdefghijklmnopqrstuvwxyz";
    int idx = indexOf(upper, ch);
    if (idx >= 0LL) {
        return 65LL + idx;
    }
    idx = indexOf(lower, ch);
    if (idx >= 0LL) {
        return 97LL + idx;
    }
    if ((strcmp(ch, "0") >= 0) && (strcmp(ch, "9") <= 0)) {
        return 48LL + parseIntStr(ch);
    }
    if (strcmp(ch, " ") == 0) {
        return 32LL;
    }
    if (strcmp(ch, ".") == 0) {
        return 46LL;
    }
    return 0LL;
}

const char* chr(int n) {
    const char* upper = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
    const char* lower = "abcdefghijklmnopqrstuvwxyz";
    if ((n >= 65LL) && (n < 91LL)) {
        return _substring(upper, n - 65LL, n - 64LL);
    }
    if ((n >= 97LL) && (n < 123LL)) {
        return _substring(lower, n - 97LL, n - 96LL);
    }
    if ((n >= 48LL) && (n < 58LL)) {
        const char* digits = "0123456789";
        return _substring(digits, n - 48LL, n - 47LL);
    }
    if (n == 32LL) {
        return " ";
    }
    if (n == 46LL) {
        return ".";
    }
    return "?";
}

int * bytesOfStr(const char* s) {
    int *bs = NULL;
    size_t bs_len = 0;
    int i = 0LL;
    while (i < strlen(s)) {
        bs = list_append_int(bs, &bs_len, ord(_substring(s, i, i + 1LL)));
        i = i + 1LL;
    }
    return bytesOfStr_len = bs_len, bs;
}

const char* bytesToDec(int * bs, size_t bs_len) {
    const char* out = "";
    int i = 0LL;
    while (i < bs_len) {
        out = str_concat(out, str_int(bs[(int)(i)]));
        if ((i + 1LL) < bs_len) {
            out = str_concat(out, " ");
        }
        i = i + 1LL;
    }
    return out;
}

int Example() {
    const char* message = "This is a test.";
    int *msgBytes = bytesOfStr(message);
    size_t msgBytes_len = bytesOfStr_len;
    puts(str_concat(str_concat(str_concat("\"", message), "\" as bytes: "), bytesToDec(msgBytes, msgBytes_len)));
    puts(str_concat("    original bits: ", bytesToBits(msgBytes, msgBytes_len)));
    Writer bw = NewWriter("MSB");
    int i = 0LL;
    while (i < msgBytes_len) {
        bw = WriteBits(bw, msgBytes[(int)(i)], 7LL);
        i = i + 1LL;
    }
    bw = CloseWriter(bw);
    puts(str_concat("Written bitstream: ", bytesToBits(bw.data, bw.data_len)));
    puts(str_concat("Written bytes: ", bytesToHex(bw.data, bw.data_len)));
    Reader br = NewReader(bw.data, bw.data_len, "MSB");
    const char* result = "";
    while (1LL) {
        Anon1 r = ReadBits(br, 7LL);
        if (r.eof) {
            break;
        }
        int v = r.val;
        if (v != 0LL) {
            result = str_concat(result, chr(v));
        }
    }
    puts(str_concat(str_concat("Read back as \"", result), "\""));
}

int main(void) {
    {
        long long __start = _now();
        long long __mem_start = _mem();
        Example();
        long long __end = _now();
        long long __mem_end = _mem();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = __mem_end - __mem_start;
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
